tests/should_fail/match_struct_field_type_mismatch_float.nv
module fail
struct Point { x: Int, y: Int }
// Float literal in Int field — type mismatch
let p = Point(1, 2)
let r = match p {
    Point { x: 3.14, y } => "bad",
    _ => "ok",
}
